--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -8390,3 +8390,27 @@ series:
         url: https://www.meetup.com/productboard-meetups/events/286708983/
         dtstart: 2022-06-27 19:00:00+02:00
         dtend: 2022-06-27 22:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Product Design Meet&Greet
+        description: 'Productboard Meetups
+
+          Monday, June 27 at 7:00 PM
+
+
+          Hello, London product design community - let''s meet and get to know each other! With the (https://2022.uxlondon.com/) kicking off soon, some of the Pr...
+
+
+          https://www.meetup.com/productboard-meetups/events/286708983/'
+        location: BrewDog Old Street (211 Old Street, London, United Kingdom EC1V 9NR)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286708983@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/286708983/
+        dtstart: 2022-06-27 19:00:00+02:00
+        dtend: 2022-06-27 22:00:00+02:00
