data: cron update

--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -6713,9 +6713,9 @@ series:
         dtstart: 2022-06-01 19:00:00+02:00
         dtend: 2022-06-01 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Jul 6, 7:00 PM  CEST: '
-      og_title: First Wednesday Of The Month - Ruby, Wed, Jul 6, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/praguerb/events/dkmktfydckbjb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: First Wednesday Of The Month - Ruby
         description: 'Prague.rb / CSRUG
@@ -6723,14 +6723,14 @@ series:
           Wednesday, July 6 at 7:00 PM
 
 
-          https://www.meetup.com/Praguerb/events/dkmktfydckbjb/'
+          https://www.meetup.com/praguerb/events/286613627/'
         location: null
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_dkmktfydckbjb@meetup.com
-        url: https://www.meetup.com/Praguerb/events/dkmktfydckbjb/
+        url: https://www.meetup.com/praguerb/events/286613627/
         dtstart: 2022-07-06 19:00:00+02:00
         dtend: 2022-07-06 22:00:00+02:00
   - meetupcom:
