--- a/data/sources/pragueaws.yaml
+++ b/data/sources/pragueaws.yaml
@@ -13929,3 +13929,57 @@ series:
         url: https://www.meetup.com/prague-aws-meetup/events/264129445/
         dtstart: 2019-09-17 18:00:00+02:00
         dtend: 2019-09-17 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Sep 7, 5:30 PM  CEST: We would like to invite you for the next Prague AWS User Group Community Meetup at Pure Storage.
+
+
+        There will be two speakers with the following presentations:
+
+
+        • Optimizing'
+      og_title: Regular Prague AWS User Group Meetup, Wed, Sep 7, 2022, 5:30 PM   | Meetup
+      url: https://www.meetup.com/prague-aws-meetup/events/287394375/
+      ical:
+        summary: Regular Prague AWS User Group Meetup
+        description: 'Prague AWS User Group
+
+          Wednesday, September 7 at 5:30 PM
+
+
+          We would like to invite you for the next Prague AWS User Group Community Meetup at Pure Storage. There will be two speakers with the following present...
+
+
+          https://www.meetup.com/prague-aws-meetup/events/287394375/'
+        location: Pure Storage (Rohanské nábř. 661/5, Praha 8-Karlín, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287394375@meetup.com
+        url: https://www.meetup.com/prague-aws-meetup/events/287394375/
+        dtstart: 2022-09-07 17:30:00+02:00
+        dtend: 2022-09-07 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Regular Prague AWS User Group Meetup
+        description: 'Prague AWS User Group
+
+          Wednesday, October 20 at 6:00 PM
+
+
+          We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT. There will be two speakers with the following presentations: • ...
+
+
+          https://www.meetup.com/prague-aws-meetup/events/280751506/'
+        location: MSD IT Global Innovation Center - Five (FIVE, Na Valentince 3336/4, 150 00, Prague, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_280751506@meetup.com
+        url: https://www.meetup.com/prague-aws-meetup/events/280751506/
+        dtstart: 2021-10-20 18:00:00+02:00
+        dtend: 2021-10-20 20:00:00+02:00
