--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -7915,3 +7915,51 @@ series:
         url: https://www.meetup.com/asociace-ux/events/286756774/
         dtstart: 2022-07-13 17:30:00+02:00
         dtend: 2022-07-13 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Mon, Aug 8, 6:00 PM  CEST: Rádi bychom pokračovali v tradici "kulatých stolů" a "UX grilů" a letos to vyšlo na "UX piknik" - neformální setkání členů i nečlenů Asociace UX, kdy tématem nebude nic odb'
+      og_title: UX piknik, Mon, Aug 8, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/asociace-ux/events/287501160/
+      ical:
+        summary: UX piknik
+        description: 'Asociace UX
+
+          Monday, August 8 at 6:00 PM
+
+
+          Rádi bychom pokračovali v tradici "kulatých stolů" a "UX grilů" a letos to vyšlo na "UX piknik" - neformální setkání členů i nečlenů Asociace UX, kdy ...
+
+
+          https://www.meetup.com/asociace-ux/events/287501160/'
+        location: Vyšehrad (V Pevnosti 159/5b, Praha 2-Vyšehrad, Czech Republic 128 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287501160@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/287501160/
+        dtstart: 2022-08-08 18:00:00+02:00
+        dtend: 2022-08-08 20:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: UX Picnic Brno in July
+        description: 'Asociace UX
+
+          Wednesday, July 13 at 5:30 PM
+
+
+          Hey designers! Let''s enjoy the summer sunshine and meet somewhere outdoors :) UX dinner is a meeting of the UX community in Brno. You can expect an in...
+
+
+          https://www.meetup.com/asociace-ux/events/286756774/'
+        location: Tyršův sad (Tyršův sad, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286756774@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/286756774/
+        dtstart: 2022-07-13 17:30:00+02:00
+        dtend: 2022-07-13 20:30:00+02:00
